--- a/multiThreadded-Brute-Force/Cargo.toml
+++ b/multiThreadded-Brute-Force/Cargo.toml
@@ -10,3 +10,4 @@ unicode-segmentation = "1.9.0"
 unic = "0.9.0"
 num_cpus = "1.0"
 arr_macro = "0.1.3"
+tokio = { version = "1", features = ["full"] }
